--- a/gb/nsc413_10.md
+++ b/gb/nsc413_10.md
@@ -1,15 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr><tr><td width="742"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"></a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"></a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"></a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"></a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13191736.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13191094-f87ae6f9379c8dcf7ef3d37130fd74d2-320x200.jpg" class=" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13191736.md#1" target="_blank">大陆7月工业利润增速降至去年11月来最低</a><br></h3>8月27日，中共国家国际统计局发布了大陆工业企业利润数据，数据显示......<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月27日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13191082.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13191094-f87ae6f9379c8dcf7ef3d37130fd74d2-320x200.jpg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13191082.md#1" target="_blank">中共三名省部级官员被捕 评论：三人都是非习派</a><br></h3>中共最高检察院接连两天发布通报，将中共三名省部级官员批捕：8月24......<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月27日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13191736.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/05/dc2da98993f9c41bba97ee13dacb506f-320x200.jpg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13191736.md#1" target="_blank">大陆7月工业利润增速降至去年11月来最低</a><br></h3>8月27日，中共国家国际统计局发布了大陆工业企业利润数据，数据显示......<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月27日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13191652.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13191701-2108262303162378-320x200.jpg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13191652.md#1" target="_blank">反感中共威胁 过半美国人支持派兵保卫台湾</a><br></h3>美国一家智库的最新调查显示，超过半数美国人支持美国在中共入侵台湾时......<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月27日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13191369.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2018/11/zhaowei-600x400-320x200.jpg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13191369.md#1" target="_blank">赵薇遭全面封杀 业界人士解析背后原因</a><br></h3>大陆艺人赵薇在视频平台的作品全线下架，其微博超话突然关闭，其封杀程......<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月27日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13190997.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13191234-2108262301542378-320x200.jpg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13190997.md#1" target="_blank">中共首派直9反潜直升机扰台 遭台空军驱离</a><br></h3>面对中共武统威胁，国军强化国防应对，国防部明年度编列预算共新台币3......<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月27日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13191570.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13191579-page-600x400-1-320x200.jpg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13191570.md#1" target="_blank">【一线采访】信阳民众：防疫过度 人快憋疯了</a><br></h3>7月底，河南郑州爆发中共病毒（COVID-19）本土疫情，特别是郑......<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月27日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13190884.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13191257-maxresdefault-2-320x200.jpg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13190884.md#1" target="_blank">【珍言真语】吴明德：当权者欲利用港股走资</a><br></h3>人民币国际化以及港币地位问题再次引发外界关注。资深银行家吴明德在接......<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月27日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13190944.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13191341-S__6258711-320x200.jpg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13190944.md#1" target="_blank">拦信访局长座车喊冤 黑龙江访民刘杰被拘留</a><br></h3>黑龙江省宾县70岁访民刘杰，8月初在北京因拦截信访局局长的车，后又......<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月27日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13190491.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13190510-GettyImages-1175318272-1200x800-600x400@1200x1200-320x200.jpeg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13190491.md#1" target="_blank">核军工支出增四倍 中共核武扩张再添新证据</a><br></h3>继卫星图像显示中共增建约300个导弹发射井后，中共十二大军工集团之......<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月27日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13191053.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13191053.md#1" target="_blank">昆明滇池周边房价大跳水 最大降幅超50%</a><br></h3>云南昆明滇池周边的房价近来大幅下降，最多的下滑了超过50%，虽然房......<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月27日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13191001.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13159853-top-1-600x400-320x200.jpg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13191001.md#1" target="_blank">【翻墙必看】赵薇疑被中共官方列为劣迹艺人</a><br></h3>大纪元每天为读者梳理翻墙必看的文章...<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月27日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13191329.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13159853-top-1-600x400-320x200.jpg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13191329.md#1" target="_blank">中国多地为何抢人打疫苗？ 民众揭黑幕</a><br></h3>中国各地强制民众打疫苗，导致乱象丛生，甚至出现了跨区抢人的现象，不......<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月27日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13191001.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2016/05/1-1-3-320x200.jpg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13191001.md#1" target="_blank">【翻墙必看】赵薇疑被中共官方列为劣迹艺人</a><br></h3>大纪元每天为读者梳理翻墙必看的文章...<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月27日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13191068.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/01/1907022241092563-320x200.jpg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/27/n13191068.md#1" target="_blank">大陆女星郑爽被罚2.99亿元 遭全面封杀</a><br></h3>继范冰冰后，大陆90后女星郑爽亦遭到重罚。8月27日，郑爽偷逃税案......<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月27日</td></tr>
@@ -30,5 +20,15 @@
 <tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13190519.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13190525-000_9L5B0-320x200.jpg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13190519.md#1" target="_blank">百年大梦：2021 终点</a><br></h3>一百年前，中国共产党在上海法租界成立。对于中华民族来说，这个日子标......<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月27日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13190456.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/05/id12929208-GettyImages-1231345271-1-e1617992727207-1200x808-320x200.jpeg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13190456.md#1" target="_blank">美参议员吁拜登解密病毒起源报告并制裁中共</a><br></h3>美国情报部门周二（8月24日）向拜登总统提交了新冠病毒（中共病毒）......<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月27日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13190149.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id12997008-Getty-Images-320x200.jpeg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13190149.md#1" target="_blank">香港支联会常委会通过解散决议 学者解析</a><br></h3>近日，香港支联会常委会投票决议解散支联会，下一步将由支联会特别委员......<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月27日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13190015.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13190052-000_9LP44B-320x200.jpg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13190015.md#1" target="_blank">【更新】喀布尔机场大爆炸 103人遇难</a><br></h3>周四（8月26日），阿富汗喀布尔机场的艾比大门（Abbey Gat......<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月27日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13190377.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13182767-XIEYANYI-600x400-320x200.jpeg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13190377.md#1" target="_blank">法轮功学员传疫情真相被抓 谢燕益：无罪有功</a><br></h3>北京画家、法轮功学员许那女士等11人面临非法开庭，许那的辩护人、人......<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月27日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13189318.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13189337-604cb5a795e6f87fb63547a300006f67-320x200.jpg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13189318.md#1" target="_blank">【拍案惊奇】塔利班要女性别出门 中共瞄上私人存款</a><br></h3>李克强把大家都骗了，习下达疫苗密令！...<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月27日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13189977.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13186191-GettyImages-1234854429-320x200.jpg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13189977.md#1" target="_blank">贺锦丽外访 中共搞小动作 专家：北京焦虑</a><br></h3>本周美国副总统贺锦丽（Kamala Harris，哈里斯）飞往越南......<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月27日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13188163.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13189321-2eb5133739b21c72ff4d342c9ac6a2f8-320x200.jpg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13188163.md#1" target="_blank">【十字路口】习思想进教科书 中南海内斗加剧？</a><br></h3>中共教育部高调宣布，将“习近平思想”正式融入全国各级学校的课程教材......<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月27日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13189940.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13189962-CBP-Officer-Fake-Gucci-handbag-320x200.jpeg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13189940.md#1" target="_blank">美海关截获大量中国假名牌商品 价值五千万</a><br></h3>美国海关和边境保护局（CBP）8月26日表示，查获来自中国的假冒名......<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月27日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13189352.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/05/id12980239-GettyImages-1228633990-320x200.jpg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13189352.md#1" target="_blank">分析：中共个人信息保护法 难敌特权横行</a><br></h3>中共制定《个人信息保护法》，新法对企业处理个人信息划定红线，被外媒......<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月26日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13189839.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13189849-c9176723419cbfe14e06ddac799758e7-320x200.jpg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13189839.md#1" target="_blank">【微视频】孟晚舟判决前 小粉红传谣华为离开加国</a><br></h3>华为首席财务官(CFO)孟晚舟引渡案的司法听证会结束了，裁决日期将......<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月26日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13189687.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13189809-000_9LN7FG-320x200.jpg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/26/n13189687.md#1" target="_blank">贺锦丽：若中共威胁国际秩序 美将大声疾呼</a><br></h3>周四（8月26日），美国副总统贺锦丽在结束东南亚之行时表示，美国欢......<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月26日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/25/n13187512.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13187568-pixabay-320x200.jpg" align ="left"></a><a href="https://github.com/dyxikb312/djy/blob/master/gb/21/8/25/n13187512.md#1" target="_blank">因坚守信仰 82岁朝鲜族老人被劫入延吉看守所</a><br></h3>8月下旬，82岁的延吉市法轮功学员安福子被警察绑架，关进延吉看守所......<br><img align="bottom" src="https://raw.githubusercontent.com/dyxikb312/www/master/t/ntdtv/time.gif">08月26日</td></tr>
 <tr><td><h3><a href="https://github.com/dyxikb312/djy/blob/master/gb/nsc413_9.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/dyxikb312/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/dyxikb312/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/dyxikb312/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/dyxikb312/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/dyxikb312/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/dyxikb312/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/dyxikb312/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/dyxikb312/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/dyxikb312/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;10&nbsp;&nbsp;<a href="https://github.com/dyxikb312/djy/blob/master/gb/nsc413_11.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/dyxikb312/djy/blob/master/gb/nsc413_10.md#1<br><a href="https://github.com/dyxikb312/djy/blob/master/gb/nsc413_10.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/dyxikb312/djy/blob/master/gb/nsc413_10.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc413_10.htm">https://www.epochtimes.com/gb/nsc413_10.htm</a>    （国内需<a href="https://github.com/dyxikb312/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
